Fixed post display on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,13 @@ div#content {
 }
 
 .left-col {
-    right: initial !important;
-    width: 1000px;
+    right: 300px !important;
 }
 
 .right-col {
     position: absolute;
     top: 133px;
-    left: 1000px;
+    width: 300px;
     right: 0;
     bottom: 0;
     overflow: auto;
